small fix to message spacing

--- a/app/assets/stylesheets/client.scss
+++ b/app/assets/stylesheets/client.scss
@@ -591,7 +591,7 @@ body{
             flex-direction: column;
         }
         .message-content-secondary{
-            padding-left: 35px;
+            padding-left: 40px;
             display: flex;
 
         }
@@ -613,7 +613,7 @@ body{
             justify-content: flex-start;
             align-items: center;
             padding-left: 0px;
-            margin-left: -10px;
+            margin-left: -5px;
          }
         .hover-timestamp{
             user-select: none;
